--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.7",
     "jquery": "^3.6.3",
     "jquery-toast-plugin": "^1.3.2",
-    "sweetalert2": "^11.7.2"
+    "sweetalert2": "^11.7.2",
+    "toastr": "^2.1.4"
   }
 }
