--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-basic-messages",
-  "version": "0.1.0-alpha",
+  "version": "1.0.0",
   "description": "Plugin basico para mostrar mensajes personalizados",
   "main": "index.js",
   "scripts": {
